# cider

./: .gitignore  Dockerfile  LICENSE.txt  Makefile  README.md  Untitled.ipynb  cbio.py  cbio_tests.ipynb  check_for_unmarked_tests.sh  datastore.py  env.yml  env_v2.yml  env_v3.yml  env_v3_win.yml  fairness.py  featurizer.py  featurizer_tests.ipynb  generate_synthetic_data.ipynb  home_location.py  ml.py  ml_utils.py  parent.py  plot_utils.py  pyproject.toml  satellite.py  survey.py  targeting.py  utils.py
.github/: lint.yaml  unit-test.yaml
book/: _config.yml  _toc.yml  intro.md  targeting_data.md
cider/: anonymize.py  anonymizer.py  data_checker.py  datastore.py  fairness.py  featurizer.py  home_location.py  ml.py  satellite.py  survey.py  targeting.py
configs/: config.yml  config_anonymize.yml  config_conner.yml  config_emily.yml  config_leo.yml  config_lucio.yml  config_min.yml  config_new.yml  config_quickstart.yml  test_config.yml
data_format/: __init__.py  data_format.yml
helpers/: features.py  features_utils.py  io_utils.py  ml_utils.py  opt_utils.py  plot_utils.py  satellite_utils.py  utils.py
notebooks/: automl_example.ipynb  automl_togo.ipynb  fairness_tests.ipynb  featurizer_tests.ipynb  homelocation_tests.ipynb  io_tests.ipynb  ml_tests.ipynb  satellite.ipynb  survey_tests.ipynb  survey_togo.ipynb  targeting_fairness_togo.ipynb  targeting_tests.ipynb
synthetic_data/: antennas.csv  cantons.geojson  fairness.csv  generate_synthetic_data.ipynb  home_locations.csv  labels.csv  mobiledata.csv  mobilemoney.csv  prefectures.geojson  recharges.csv  regions.geojson  salt.txt  (+5 more)
(+128 files in other folders)
